# psihub

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  __init__.py  _copy.py  _metadata.py  cards.py  cli.py  config.py  local.py  manifest.py  mkdocs.yml  models.py  pyproject.toml  refs.py  server.py  validator.py
.github/workflows/: ci.yml
docs/: getting-started.md  index.md  prosi-client.html
docs/client/: index.md
docs/concepts/: packages.md  refs-and-config.md
docs/guides/: cards.md  local-hub.md
docs/protocol/: index.md
docs/reference/: cli.md  local-hub-api.md  manifest.md
docs/stylesheets/: custom.20260629.css  custom.css
docs/tutorials/: local-package-lifecycle.md
examples/local_package_lifecycle/: README.md  workflow.py
psihub/: __init__.py  cards.py  config.py  endpoints.py  entrypoints.py  files.py  local.py  manifest.py  models.py  refs.py  server.py  validator.py
tests/: test_boundaries.py  test_cross_layer_composition.py  test_docs_rendering.py  test_http_ref_composition.py  test_lifecycle.py  test_sdist_contents.py  test_server.py  test_societal_analysts_fixture.py
