[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psihub"
version = "0.1.0"
description = "Local-first package hub for PSI packages."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "pydantic>=2.7",
  "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
docs = ["mkdocs-material>=9.5"]
dev = [
  "pytest>=8.0",
  "build>=1.2",
  "twine>=5.1",
  "fastapi>=0.115",
  "httpx>=0.27",
]
server = ["fastapi>=0.115", "uvicorn>=0.30"]

[project.scripts]
psihub = "psihub.cli:main"

[project.urls]
Homepage = "https://github.com/Productive-Superintelligence/psihub"
Source = "https://github.com/Productive-Superintelligence/psihub"
Issues = "https://github.com/Productive-Superintelligence/psihub/issues"

[tool.setuptools]
packages = ["psihub"]

[tool.setuptools.package-data]
psihub = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
